# redis-gui

./: .gitignore  README.md  package-lock.json  package.json  pubspec.yaml  tauri-app.desktop
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/redis_gui_manager/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/ds/: RedisDataSource.dart  conn_info_map_sqlite.dart  redis_connection_info.dart  redis_datasource.dart  sqlite_op.dart  sqllite_op.dart
lib/gui/: body_gui.dart  connection_info_pannel.dart  home_gui.dart  menubar_gui.dart  redis_ops_gui.dart  server_list_model.dart  server_list_panel.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/redis_server/: mod.rs
src/components/: RedisPanel.jsx  addServerInfo.jsx  home.jsx  mainPanel.jsx  serverList.jsx
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
